feat(apiv2): give the v2 API access to the lecture hall cameras (#1990)
